<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/games" />
        <item
            android:id="@+id/my_exchanges"
            android:icon="@drawable/ic_exchange_arrow_white_24dp"
            android:title="@string/my_exchanges" />
        <item
            android:id="@+id/chats"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chats" />
    </group>

    <item android:title="@string/user_account">
        <menu>
            <item
                android:id="@+id/my_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_highlight_off_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
