<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.egames.activities.NegotiateExchangeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/exchange_my_games_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.59"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exchange_my_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_my_games"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

                <es.egames.widgets.MultiSelectionSpinner
                    android:id="@+id/spinner_my_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exchange_their_games_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.59"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exchange_their_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_their_games"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

                <es.egames.widgets.MultiSelectionSpinner
                    android:id="@+id/spinner_their_games"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exchange_other_information_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exchange_other_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/exchange_other_information"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/exchange_way_exchange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/exchange_way_exchange"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/exchange_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/exchange_note"
                        android:inputType="textShortMessage" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/exchange_submit_exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/exchange_negotiate_exchange"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
