<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.egames.activities.QualifyExchangeActivity">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:text="@string/rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <RatingBar
            android:id="@+id/qualify_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines">

            <AutoCompleteTextView
                android:id="@+id/qualify_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:singleLine="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/qualify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="16dp"
            android:text="@string/qualify"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
